Overflow fix.

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,9 +15,12 @@ body {
     }
 
     overflow-y: hidden;
-    overflow-x: hidden;
 
     &.loaded {
         overflow-y: auto;
     }
+}
+
+html, body {
+    overflow-x: hidden !important;
 }
